Make all JVM Opts user-configurable